Fixed profile image distortion

--- a/styles/header.css
+++ b/styles/header.css
@@ -23,6 +23,14 @@ header .container {
   margin-bottom: 8px;
 }
 
+#profile img {
+  width: 176px;
+  height: 176px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+
 #profile p {
   font: var(--text-md);
 
